# COOP

./: INSTALL  Makefile  README.md  autoupdate.sh  clear.sh  compile.sh  compile_rules.in  configure.in  configure_linux_gfortran.in  configure_linux_ifort.in  configure_macOS.in  configure_minimum.in  configure_minimum_linux.in  configure_minimum_macOS.in  push.sh
EarlyUniverse/: Makefile  get_background.f90  get_inf_power.f90  lattice.f90  lattice_fields.f90  runlattice.f90  stoinf.f90  test.f90
EarlyUniverse/dev/: lattice.f90
background/: Makefile  background.f90  background_old_CPL.f90  epstbl.f90  fiteps.f90  plotdata.f90  plotsn_w.f90  test.f90  test_cpl_de.f90  testde.f90  testeft.f90  wrapper.f90
data/Pantheon/: full_long.dataset  full_long.dataset~  pec001.dataset  pec002.dataset  pec003.dataset  pec004.dataset  pec005.dataset  pec006.dataset
data/bao/: sdss_6DF_bao.dataset  sdss_DR11CMASS_bao.dataset  sdss_DR11LOWZ_bao.dataset  sdss_MGS_bao.dataset  sdss_MGS_prob.txt  wigglez_bao.dataset
data/cmb/: cmb.f90
data/jla/: jla.dataset
data/weaklensing/: CFHTLENS_1bin.dataset  CFHTLENS_1bin_conservative.dataset  CFHTLENS_1bin_ultra_conservative.dataset  CFHTLENS_2bin.dataset  CFHTLENS_2bin_Simpson.dataset  CFHTLENS_6bin.dataset  CFHTLENS_6bin_conservative.dataset  CFHTLENS_6bin_ultra_conservative.dataset
firstorder/: Cls_post_process.f90  Makefile  calc_cls.f90  calc_mp.f90  calc_w.f90  cls_indices.f90  cplde_cls.f90  cplde_one_mode.f90  do_zeta_corr.f90  eft1.ini  eft_cls.f90  eft_one_mode.f90  firstorder.f90  lensing.f90  originrec.f90  originrecfast.f90  params.ini  pertobj.f90  recfast.f90  solve_pert.f90  test.f90  testMatterPower.f90  test_mult_cls.f90  test_mult_growth.f90  test_one_mode.f90  testcls.f90  testcplde.f90  testeft.f90  testzeta.f90  wrapper.f90  zeta.f90
firstorder/inis/: alpha0.ini  alpha1.ini  alpha2.ini  alpha3.ini  eft.ini  eft2.ini  lcdm.ini  params.ini
firstorder/pyscripts/: plot_cont.py  plotphipsi.py  zeta.py
firstorder/testfiles/: test_cde.f90  test_get_growth.f90  test_get_kminkmax.f90
forecast/: HSTlike.f90  Makefile  SNlike_JLA.f90  SNlike_evolve.f90  bao.f90  bao_old.f90  chronometer.f90  cliklike.f90  fisher.f90  forecast.f90  forecast_copy.f90  gobs.f90  jerk.f90  mcmc.f90  page.f90  params_cmb.ini  params_fisher.ini  params_mpk.ini  plotfisher.f90  print_clik.f90  runMPI.pl  runfisher.f90  runmcmc.f90  script.jb  sltd.f90  submit.py  supernovae_JLA.f90  test.f90  testSN.f90  testclik.f90  teststd6.f90  wl.f90
forecast/covmats/: lcdm.covmat  nQ.covmat  qcdm.covmat  (+2 more)
headfile/: constants.h  default_cosmology_parameters.h  settings_constants.h  species_init.h
include/: constants.h  constants_char.h  constants_datatypes.h  constants_math.h  constants_physics.h  constants_settings.h  cosmology_background_init.h  cosmology_init.h  datatypes_constants.h  default_cosmology_parameters.h  dverk.h  dverk_nostop.h  file_init.h  firstorder_basic_utils.h  firstorder_compute_sigma.h  firstorder_cosmomc_utils.h  firstorder_equations.h  firstorder_equations_CPLDE.h  firstorder_equations_EFT.h  firstorder_equations_EFT_ignore_early.h  firstorder_ic.h  firstorder_ic_CPLDE.h  firstorder_ic_EFT.h  firstorder_source.h  firstorder_source_test_conservation.h  int2d.h  jmaxmin.h  jzeros.h  lattice.h  lattice_field_model.h  lattice_field_model_R2.h  lattice_field_model_lf4.h  lattice_field_model_mphi2.h  lattice_field_model_toybump.h  math_constants.h  paths.h  physics_constants.h  qromb.h  recfast_head.h  recfast_source.h  (+8 more)
lib/: Makefile  cambpp.f90  ccname.py  f77tof90.py  fixclikbug.py  gdist.py  link2coop.py  link2coop_perturbations.py  link2cosmorec.py  link2rsd.py  link2w.py  link2wl.py  linkpp.py  replace.py  restore.sh  search.py  submit.py  submitlite.py  svnaddfigs.py  varyrecfast.py  vdini.py  wrapper.f90
mapio/: .#sphere.f90  Makefile  actopts.sh  acttheo.f90  asym_ffp7.f90  asym_predx11.f90  asymmetry.f90  blend_map.f90  calc_intermittency.f90  calcls.txt  calcprodsum.f90  ceamaps.f90  change_cards.f90  check_QU.py  check_T.py  check_table.py  clform.f90  coop_fitsio.f90  coop_general_stack.f90  deltaN-LUT-1.875  dostack.f90  ensemble_asymmetry.f90  exportpeaks.f90  exportspots.f90  f2h.sh  fetchali.f90  filterdust.f90  fitalphabeta.f90  fitswrap.f90  fitswrap_usec.f90  flat2heal.f90  flat_1ddistr.f90  flat_coadd.f90  flat_cut_radec.f90  flat_eb2qu.f90  flat_exportspots.f90  flat_genmask.f90  flat_mask.f90  flat_merge.f90  flat_ptop.f90  (+107 more)
nonlinear/: Makefile  coupledDE_collapse.f90  coupledDE_export_cosmology.f90  coupledDE_solve_collapse.f90  coupledDE_spherical_collapse.f90  ellipse_collapse.f90  export.ini  fR1Dobj.f90  fR3Dobj.f90  fR_collapse_1Dtoy.f90  get_zvir1.f90  make_zvir1_table.f90  nonlinear.f90  params.ini  read_table_sample.f90  read_tables.f90  solve_collapse.f90  test.f90  testcollapse.f90  testsimple.f90  uncoupled_params.ini  wltest.f90
postprocess/: Makefile  example.ini  getdist.f90  latex.f90  merge_chains.f90  planck14_cltt.txt  planck_cltt.txt  statchains.f90  test.f90
test/: Makefile  example1.f90  example2.f90  example3.f90  quintessence.f90  test.f90
typedef/: Makefile  arguments.f90  basictype.f90  basicutils.f90  constants.f90  cosmology.f90  cosmology_EFT.f90  cwrapper.c  function.f90  page.f90  particle.f90  sort.f90  sortrev.f90  species.f90  string.f90  svd.f90  test.f90  test.txt  test2.txt  test3.txt  typedef.f90  types_basic.f90  wrapper.f90
utils/: .bash_aliases  IDPossible.f90  MPIutils.f90  Makefile  QuN_1fld.f90  QuN_2flds.f90  Test  WeiqiTerminator.f90  asy.f90  asympt.f90  asyplot.asy  basic_utils.f90  chebyshev.f90  cholesky.f90  cloud.f90  contours.f90  coop_asy_mod.mod  coop_file_mod.mod  coop_fitsio.f90  coop_integrate_mod.mod  coop_interpolation_mod.mod  coop_list_mod.mod  coop_matrix_mod.mod  coop_mpi_mod.mod  coop_ode_mod.mod  coop_random_mod.mod  coop_sort_mod.mod  coop_special_function_mod.mod  coop_wrapper_utils.mod  cwrapper.c  decrypt.f90  encbin.f90  encrypt.f90  evalstr.f90  expint_utils.f90  extrapolate.f90  fasy.sh  fft.f90  file_io.f90  gasmodel.f90  (+53 more)
(+216 files in other folders)
