PLATFORM = MacOS
#PLATFORM = Windows
#PLATFORM = LINUX

ifeq ($(PLATFORM),MacOS)
GFORTRAN_NAME = gfortran-mp-4.7
else
GFORTRAN_NAME = gfortran
endif

GCC_NAME=gcc
IFORT_NAME=ifort
ICC_NAME=icc

######## compiler options  #######
### YES or NO
#### distributed memory (you should have a compiler alias mpif77 or mpif90 installed); This is used to generate multiple chains when doing MCMC.
USE_MPI = YES
MPI_COMPILER_ALIAS = mpif90
#### shared memory; 
USE_OPENMP = YES
##### compilers
#free compiler $(GCC_NAME) and $(GFORTRAN_NAME); you also need preprocessor that comes with $(GCC_NAME)
FORTRAN_COMPILER = $(GFORTRAN_NAME)
C_COMPILER = $(GCC_NAME)
#if you have intel compilers
#FORTRAN_COMPILER = $(IFORT_NAME)
#C_COMPILER = $(ICC_NAME)
########################librarys #############################################
########not all libraries are required  (depending on what you want to do)####
########set to null string for librarys that are not installed ###############
##############################################################################
##LAPACK lib, mandatory if you use any data (WMAP, ACT, SPT, SNLS3yr)

LAPACK = $(HOME)/includes/lapack-3.4.2

##FFTW lib (v3.2 up)
FFTW3=$(HOME)/includes/fftw3

## gsl lib 
GSL =
#$(HOME)/mathlib/gsl


##cfitsio lib, mandatory if you include WMAP
CFITSIO = 
#$(HOME)/includes/cfitsio

####################### the rest ##########################################
#should automatically work if you are using $(IFORT_NAME) or $(GFORTRAN_NAME); 
#if not, you can change the flags by hand 
###########################################################################
##$(GFORTRAN_NAME) flags
ifeq ($(FORTRAN_COMPILER), $(GFORTRAN_NAME))
## add  -Wall -fbounds-check if you want to debug
FFLAGS	= -cpp --free-line-length-none -fmax-identifier-length=63 -O3 -fimplicit-none 
ifeq ($(USE_OPENMP), YES)
FFLAGS += -fopenmp
endif
endif

#$(IFORT_NAME) flags
ifeq ($(FORTRAN_COMPILER), $(IFORT_NAME))
FFLAGS = -fpp -O3 -assume byterecl
ifeq ($(USE_OPENMP), YES)
FFLAGS += -openmp
endif
endif

#$(GCC_NAME) flags
ifeq ($(C_COMPILER), $(GCC_NAME))
CFLAGS = -cpp -O3 
ifeq ($(USE_OPENMP), YES)
CFLAGS += -openmp
endif
endif

#$(ICC_NAME) flags
ifeq ($(C_COMPILER), $(ICC_NAME))
CFLAGS = -O3
ifeq ($(USE_OPENMP), YES)
CFLAGS += -openmp
endif
endif

#define your FLAGS here if you are using other compilers
#FFLAGS = 
#CFLAGS =

LINK = 
INCLUDE = -I. -I../headfile/


CC = $(C_COMPILER)

ifeq ($(USE_MPI), YES)
FC = $(MPI_COMPILER_ALIAS)
FFLAGS += -DMPI
CFLAGS += -DMPI
INCLUDE += -I/usr/local/include
else
FC = $(FORTRAN_COMPILER)
endif



####################do not need to change anything below ################


ifneq ($(TYPEDEF),)
LINK += -L$(TYPEDEF) -lcooptypedef
INCLUDE += -I$(TYPEDEF)
endif

ifneq ($(NONLINEAR),)
LINK += -L$(NONLINEAR) -lcoopnonlinear
INCLUDE += -I$(NONLINEAR)
endif

ifneq ($(SECONDORDER),)
LINK += -L$(SECONDORDER) -lcoopsecondorder
INCLUDE += -I$(SECONDORDER)
endif

ifneq ($(FIRSTORDER),)
LINK += -L$(FIRSTORDER) -lcoopfirstorder
INCLUDE += -I$(FIRSTORDER)
endif

ifneq ($(BACKGROUND),)
LINK += -L$(BACKGROUND) -lcoopbackground
INCLUDE += -I$(BACKGROUND)
endif

ifneq ($(UTILS),)
LINK += -L$(UTILS) -lcooputils
INCLUDE += -I$(UTILS)
endif




###set fftw flags here
ifneq ($(FFTW3),)
LINK += -L$(FFTW3)/lib -lfftw3 -lfftw3_mpi
FFLAGS += -DHAS_FFTW=1
CFLAGS += -DHAS_FFTW=1
INCLUDE += -I$(FFTW3)/include -I$(FFTW)/include/fftw3
endif

###set gsl flags here
ifneq ($(GSL),)
LINK += -L$(GSL)/lib -lgsl -lgslcblas 
FFLAGS += -DHAS_GSL=1
CFLAGS += -DHAS_GSL=1
INCLUDE +=  -I$(GSL)/include/gsl -I$(GSL)/include
endif

###set lapack flags here
ifneq ($(LAPACK),)
ifeq ($(PLATFORM),MacOS)
LINK += -framework Accelerate
else
LINK += -L$(LAPACK) -llapack -lblas
endif
FFLAGS += -DHAS_LAPACK=1
CFLAGS += -DHAS_LAPACK=1
INCLUDE += -I$(LAPACK)
endif

